Catalog 기초 페이지 완성

--- a/mds_catalog/src/main/resources/GeoServerApplication.properties
+++ b/mds_catalog/src/main/resources/GeoServerApplication.properties
@@ -1,5 +1,5 @@
-mdsCatalogPage.page.title=Data Catalog
-mdsCatalogPage.page.description=View Data Catalog Page
+mdsCatalogPage.page.title=Layer Catalog
+mdsCatalogPage.page.description=View Layer Catalog Page
 
-mdsCatalogPage.title=Hello Page Title
-mdsCatalogPage.description=This is the description of the page
+MainPage.title=Layer Catalog
+MainPage.description=Show catalog of layer that published on GeoServer.
